samples/_failures_safe/1761311352_14e13b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b65a55a.c: In function ‘main’:
./samples/SAFE/__tmp_4b65a55a.c:160:5: error: expected declaration or statement at end of input
  160 |     }
      |     ^
